# flastex-bpm

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: api.yml  core.yml  services.yml
api/: Cargo.toml  README.md
api/src/: main.rs
core/: Cargo.toml  README.md  run-tests.sh
core/src/: bpmn.rs  commons.rs  lib.rs  tests.rs
core/src/bpmn/: model.rs  runtime.rs
core/src/bpmn/model/: connecting_objects.rs  errors.rs  flow_objects.rs  process.rs  script.rs  xml_parser.rs
core/src/bpmn/model/connecting_objects/: sequence_flows.rs
core/src/bpmn/model/flow_objects/: activity.rs  event.rs  gateway.rs  task.rs
core/src/bpmn/model/xml_parser/: connecting_objects.rs  flow_object_xml_parsers.rs  flow_objects.rs  process_xml_parser.rs  sequence_flow_xml_parser.rs
core/src/bpmn/model/xml_parser/connecting_objects/: sequence_flows.rs
core/src/bpmn/model/xml_parser/flow_objects/: event_xml_parsers.rs  gateway_xml_parser.rs  task_xml_parsers.rs
core/src/bpmn/runtime/: behaviors.rs  errors.rs  execution_context.rs  flow_objects.rs  path_identifier.rs  process.rs  process_engine.rs  token.rs  utils.rs
core/src/bpmn/runtime/behaviors/: event_behaviors.rs  gateway_behaviors.rs  task_behaviors.rs
core/src/bpmn/runtime/utils/: token_id_utils.rs
core/src/commons/: xml.rs
core/src/commons/xml/: constants.rs  utils.rs
core/src/tests/: process_engine_tests.rs  xml_parser_tests.rs
db/: Cargo.toml  README.md
resources/tests/: simple_process_v1.bpmn  (+1 more)
services/: Cargo.toml  README.md
